# tjipesb

./: .gitignore  README.md  app.js  build_exe.bat  index.html  launcher.py  mobile-upload.html  package-lock.json  package.json  server.py  styles.css  tauri-bridge.js  tjipe_touchscreen.spec
.codex/environments/: environment.toml
.github/workflows/: windows-build.yml
TjipeTouchscreenWinUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  TjipeTouchscreenWinUI.csproj  app.manifest
TjipeTouchscreenWinUI/Models/: DashboardModels.cs
scripts/: sync-web-dist.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
web-dist/: app.js  index.html  styles.css
