[package]
name = "tjipe-touchscreen"
version = "1.0.0"
description = "天津知识产权交易中心触摸屏展示软件"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"

[features]
default = []
